<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="submit">SUBMIT</string>
    <string name="_0_10">0/10</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
</resources>